--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
     <meta charset="utf-8" />
     <title>TASKMASTER - funny tagline here</title>
   </head>
   <body>
     <header>
       <nav>
-        <p>TASKMASTER options: <a href="/create">Create a new task!</a></p>
+        <p><a href="/create">Create a new task!</a></p>
         <!-- <p><a href="/update">Update a task!</a></p> -->
       </nav>
     </header>
