--- a/views/create_task.erb
+++ b/views/create_task.erb
@@ -1,6 +1,7 @@
+
 <form id="create" class="" action="/" method="post">
-  <label>Name <input type="text" name="name" placeholder="create a to-do list app" required /></label>
-  <label>Description <input type="text" name="description" placeholder="You can put an optional description of your task here." /></label>
-  <label>Date of completion <input type="text" name="complete" placeholder="optional" /></label>
+  <label>Name <input size="50" type="text" name="name" placeholder="create a to-do list app" required /></label>
+  <label>Description <input size="50" type="text" name="description" placeholder="You can put an optional description of your task here." /></label>
+  <label>Date of completion <input size="50" type="text" name="complete" placeholder="optional" /></label>
   <button type="submit">Create New Task</button>
 </form>
