--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,13 +3,15 @@ body {
   background: #ccc;
   margin: 2% auto;
   text-align: center;
-/*  margin-top: 100px;*/
-
 }
 
 h1 {
   padding: 0;
   margin: 0 0 5px 0;
+}
+
+#error {
+  color: #c00;
 }
 
 main {
@@ -21,13 +23,12 @@ nav {
 }
 
 table {
-    border-collapse: collapse;
-    margin: auto;
+  border-collapse: collapse;
+  margin: auto;
 }
 
-
 table, th, td {
-   border: 1px solid black;
+  border: 1px solid black;
 }
 
 #id {
@@ -58,12 +59,3 @@ form {
   width: 500px;
   margin: auto;
 }
-
-
-
-
-
-
-
-
-
