--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Indie+Flower" />
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
     <title>TASKMASTER - funny tagline here</title>
   </head>
   <body>
     <header>
       <nav>
-        <p><a href="/create">Create a new task!</a></p>
-        <!-- <p><a href="/update">Update a task!</a></p> -->
+        <a href="/">Go home!</a>
+        <a href="/create">Create a new task!</a>
+        <a href="/complete">Mark tasks complete!</a>
+        <a href="/delete">Delete a task!</a>
       </nav>
     </header>
     <main>
